package not.djinni.domain.repository

import not.djinni.model.token.AuthTokens
import not.djinni.model.User

interface AuthRepository {

    suspend fun login(email: String, password: String): Result<Long>
    suspend fun register(name: String, email: String, password: String): Result<Long>

    suspend fun generateTokens(userId: Long): Result<AuthTokens>
    suspend fun refreshAccessToken(refreshToken: String): Result<AuthTokens>
    suspend fun logout(refreshToken: String): Result<Unit>
}
